--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Build files
+build
+
 # Logs
 logs
 *.log
@@ -32,3 +35,6 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# Other
+.DS_Store
